--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -13,6 +13,26 @@
         android:theme="@style/Theme.CrowdSpark"
         tools:targetApi="31">
         <activity
+            android:name=".ventanas.EditarUsuario"
+            android:exported="false" />
+        <activity
+            android:name=".componentes.ProyectCard"
+            android:exported="false" />
+        <activity
+            android:name=".ventanas.EditarProyecto"
+            android:exported="false" />
+        <activity
+            android:name=".ventanas.Formulario"
+            android:exported="false" />
+        <activity
+            android:name=".ventanas.Principal"
+            android:exported="false"
+            android:label="@string/title_activity_principal"
+            android:theme="@style/Theme.CrowdSpark.NoActionBar" />
+        <activity
+            android:name=".ventanas.Registrarse"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
