--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.CrowdSpark"
         tools:targetApi="31">
         <activity
+            android:name=".ventanas.Historial"
+            android:exported="false" />
+        <activity
+            android:name=".ventanas.Donacion"
+            android:exported="false" />
+        <activity
+            android:name=".ventanas.DetalleProyecto"
+            android:exported="false" />
+        <activity
             android:name=".ventanas.EditarUsuario"
             android:exported="false" />
         <activity
